added html and css files

--- a/playpart.html
+++ b/playpart.html
@@ -2,39 +2,61 @@
 <html>
     <head>
         <title>Act play</title>
+        <link rel="ibsen" type="text/css" href="ibsen.css">
     </head>
     <body>
         <h1>Navyasree sriperumbudoor acts in a play</h1>
-        <h2>The Master Builder by Henrik Ibsen</h2>
-        <p>
+        <h2 style="color:green;">The Master Builder by Henrik Ibsen</h2>
+        
   
-            <h2> ACT SECOND</h2>
+            <h2 style="color: red;">ACT SECOND</h2>
             <br>
-
-SOLNESS.
-[Turns his head, and says in an off-hand tone of indifference:] Well, is
+<pre>
+<p>
+<h4>SOLNESS.</h4><p>[Turns his head, and says in an off-hand tone of indifference:]</p> Well, is
 that you?
-<br><br>
-KAIA.
-I merely wished to let you know that I have come.
-<br><br>
-SOLNESS.
-Yes, yes, that's all right. Hasn't Ragnar come too?
-<br><br>
-KAIA.
-No, not yet. He had to wait a little while to see the doctor. But he is
+</p>
+<p>
+<h4>KAIA.</h4>I merely wished to let you know that I have come.
+</p>
+<p>
+<h4>SOLNESS.</h4>Yes, yes, that's all right. Hasn't Ragnar come too?
+</p>
+<p>
+<h4>KAIA.</h4>No, not yet. He had to wait a little while to see the doctor. But he is
 coming presently to hear--
-<br><br>
-SOLNESS.
-How is the old man to-day?
-<br><br>
-KAIA.
-Not well. He begs you to excuse him; he is obliged to keep his bed
+</p>
+<p>
+<h4>SOLNESS.</h4>How is the old man to-day?
+</p>
+<p>
+<h4>KAIA.</h4>Not well. He begs you to excuse him; he is obliged to keep his bed
 to-day.
-<br><br>
-SOLNESS.
-Why, of course; by all means let him rest. But now, get to your work.
+</p>
+<p>
+<h4>SOLNESS.</h4>Why, of course; by all means let him rest. But now, get to your work.
+</p>
+<p><h4>SOLNESS.</h4><p>[Gloomily.]</p> I suppose I must be--or not far from it. <p>[Looks towards the
+door to the right, which is opened at this moment.]</p> Ah! now it grows
+light.</p>
 
-        </p>
+<p>HILDA WANGEL comes in.  She has made some alteration in her
+dress, and let down her skirt.</p>
+
+<p><h4>HILDA.</h4>Good morning, Mr. Solness!</p>
+
+<p><h4>SOLNESS.</h4><p>[Nods.]</p> Slept well?</p>
+
+<p><h4>HILDA.</h4>Quite deliciously! Like a child in a cradle. Oh--I lay and stretched
+myself like--like a princess!</p>
+
+<p><h4>SOLNESS.</h4><p>[Smiles a little.]</p> You were thoroughly comfortable then?</p>
+
+<p><h4>HILDA.</h4>I should think so.</p>
+
+<p><h4>SOLNESS.</h4>And no doubt you dreamed, too.</p>
+
+</pre>
+
     </body>
 </html>
