added playpart.html file

--- a/playpart.html
+++ b/playpart.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Act play</title>
-        <link rel="ibsen" type="text/css" href="ibsen.css">
+        <link rel="stylesheet" type="text/css" href="ibsen.css">
     </head>
     <body>
         <h1>Navyasree sriperumbudoor acts in a play</h1>
