--- a/playpart.html
+++ b/playpart.html
@@ -12,51 +12,84 @@
             <h2 style="color: red;">ACT SECOND</h2>
             <br>
 <pre>
-<p>
+<p class="speech SOLNESS">Solness speaks
 <h4>SOLNESS.</h4><p>[Turns his head, and says in an off-hand tone of indifference:]</p> Well, is
 that you?
 </p>
-<p>
+<p class="speech KAIA">kaia speaks
 <h4>KAIA.</h4>I merely wished to let you know that I have come.
 </p>
-<p>
+<p class="speech SOLNESS">solness speaks
 <h4>SOLNESS.</h4>Yes, yes, that's all right. Hasn't Ragnar come too?
 </p>
-<p>
+<p class="speech KAIA">kaia speaks
 <h4>KAIA.</h4>No, not yet. He had to wait a little while to see the doctor. But he is
 coming presently to hear--
 </p>
-<p>
+<p class="speech SOLNESS">solness speaks
 <h4>SOLNESS.</h4>How is the old man to-day?
 </p>
-<p>
+<p class="speech KAIA">kaia speaks
 <h4>KAIA.</h4>Not well. He begs you to excuse him; he is obliged to keep his bed
 to-day.
 </p>
-<p>
+<p class="speech SOLNESS">solness speaks
 <h4>SOLNESS.</h4>Why, of course; by all means let him rest. But now, get to your work.
 </p>
-<p><h4>SOLNESS.</h4><p>[Gloomily.]</p> I suppose I must be--or not far from it. <p>[Looks towards the
+<p class="speech SOLNESS">solness speaks<h4>SOLNESS.</h4><p>[Gloomily.]</p> I suppose I must be--or not far from it. <p>[Looks towards the
 door to the right, which is opened at this moment.]</p> Ah! now it grows
 light.</p>
 
-<p>HILDA WANGEL comes in.  She has made some alteration in her
+<p class="direction">HILDA WANGEL comes in.  She has made some alteration in her
 dress, and let down her skirt.</p>
 
-<p><h4>HILDA.</h4>Good morning, Mr. Solness!</p>
+<p class="speech HILDA">hilda speaks<h4>HILDA.</h4>Good morning, Mr. Solness!</p>
 
-<p><h4>SOLNESS.</h4><p>[Nods.]</p> Slept well?</p>
+<p class="speech SOLNESS">solness speaks<h4>SOLNESS.</h4><p>[Nods.]</p> Slept well?</p>
 
-<p><h4>HILDA.</h4>Quite deliciously! Like a child in a cradle. Oh--I lay and stretched
+<p class="speech HILDA">hilda speaks<h4>HILDA.</h4>Quite deliciously! Like a child in a cradle. Oh--I lay and stretched
 myself like--like a princess!</p>
 
-<p><h4>SOLNESS.</h4><p>[Smiles a little.]</p> You were thoroughly comfortable then?</p>
+<p class="speech SOLNESS">solness speaks</p><h4>SOLNESS.</h4><p>[Smiles a little.]</p> You were thoroughly comfortable then?</p>
 
-<p><h4>HILDA.</h4>I should think so.</p>
+<p class="speech HILDA">hilda speaks<h4>HILDA.</h4>I should think so.</p>
 
-<p><h4>SOLNESS.</h4>And no doubt you dreamed, too.</p>
+<p class="speech SOLNESS">solness speaks<h4>SOLNESS.</h4>And no doubt you dreamed, too.</p>
 
 </pre>
+
+<table class="table" border="1">
+    <thead>
+        <tr>
+            <th>Character</th>
+            <th>Actor</th>
+            <th>Understudy</th>
+        </tr>
+    </thead>
+    <tbody>
+        <!-- Add table rows with character, actor, and understudy information -->
+        <tr>
+            <td>SOLNESS</td>
+            <td>Venkatesh</td>
+            <td>Chiranjeevi</td>
+        </tr>
+        <tr>
+            <td>KAIA</td>
+            <td>Alia Bhatt</td>
+            <td>Deepika Padukone</td>
+        </tr>
+        <tr>
+            <td>HILDA</td>
+            <td>Nivetha thomas</td>
+            <td>Nazriya</td>
+        </tr>
+        <!-- Add more rows as needed -->
+    </tbody>
+</table>
+
+
+
+
 
     </body>
 </html>
