added files including extra.html

--- a/playpart.html
+++ b/playpart.html
@@ -58,7 +58,7 @@ myself like--like a princess!</p>
 
 </pre>
 
-<table class="table" border="1">
+<table class="classtable" border="1" style="width:100%">
     <thead>
         <tr>
             <th>Character</th>
@@ -87,9 +87,6 @@ myself like--like a princess!</p>
     </tbody>
 </table>
 
-
-
-
-
+<a href="extra.html">Link to extra.html</a>
     </body>
 </html>
