added all required files

--- a/playpart.html
+++ b/playpart.html
@@ -12,49 +12,52 @@
             <h2 style="color: red;">ACT SECOND</h2>
             <br>
 <pre>
-<p class="speech SOLNESS">Solness speaks
-<h4>SOLNESS.</h4><p>[Turns his head, and says in an off-hand tone of indifference:]</p> Well, is
-that you?
+
+<h4><p class="SOLNESS">SOLNESS.</p></h4><p class="direction">[Turns his head, and says in an off-hand tone of indifference:]</p><p class="speech">Well, is
+that you?</p>
+
+
+<h4><p class="KAIA">KAIA.</p></h4><p class="speech">I merely wished to let you know that I have come.
 </p>
-<p class="speech KAIA">kaia speaks
-<h4>KAIA.</h4>I merely wished to let you know that I have come.
+
+<h4><p class="SOLNESS">SOLNESS.</p></h4><p class="speech">Yes, yes, that's all right. Hasn't Ragnar come too?
 </p>
-<p class="speech SOLNESS">solness speaks
-<h4>SOLNESS.</h4>Yes, yes, that's all right. Hasn't Ragnar come too?
-</p>
-<p class="speech KAIA">kaia speaks
-<h4>KAIA.</h4>No, not yet. He had to wait a little while to see the doctor. But he is
+
+
+<h4><p class="KAIA">KAIA.</p></h4><p class="speech">No, not yet. He had to wait a little while to see the doctor. But he is
 coming presently to hear--
 </p>
-<p class="speech SOLNESS">solness speaks
-<h4>SOLNESS.</h4>How is the old man to-day?
+
+<h4><p class="SOLNESS">SOLNESS.</p></h4><p class="speech">How is the old man to-day?
 </p>
-<p class="speech KAIA">kaia speaks
-<h4>KAIA.</h4>Not well. He begs you to excuse him; he is obliged to keep his bed
+
+<h4><p class="KAIA">KAIA.</p></h4><p class="speech">Not well. He begs you to excuse him; he is obliged to keep his bed
 to-day.
 </p>
-<p class="speech SOLNESS">solness speaks
-<h4>SOLNESS.</h4>Why, of course; by all means let him rest. But now, get to your work.
+
+
+<h4><p class="SOLNESS">SOLNESS.</p></h4><p class="speech">Why, of course; by all means let him rest. But now, get to your work.
 </p>
-<p class="speech SOLNESS">solness speaks<h4>SOLNESS.</h4><p>[Gloomily.]</p> I suppose I must be--or not far from it. <p>[Looks towards the
-door to the right, which is opened at this moment.]</p> Ah! now it grows
+
+<h4><p class="SOLNESS">SOLNESS.</p></h4><p class="direction">[Gloomily.]</p><p class="speech">I suppose I must be--or not far from it.</p><p class="direction">[Looks towards the
+door to the right, which is opened at this moment.]</p><p class="speech">Ah! now it grows
 light.</p>
 
 <p class="direction">HILDA WANGEL comes in.  She has made some alteration in her
 dress, and let down her skirt.</p>
 
-<p class="speech HILDA">hilda speaks<h4>HILDA.</h4>Good morning, Mr. Solness!</p>
+<h4><p class="HILDA">HILDA.</p></h4><p class="speech">Good morning, Mr. Solness!</p>
 
-<p class="speech SOLNESS">solness speaks<h4>SOLNESS.</h4><p>[Nods.]</p> Slept well?</p>
+<h4><p class="SOLNESS">SOLNESS.</p></h4><p class="direction">[Nods.]</p> <p class="speech">Slept well?</p>
 
-<p class="speech HILDA">hilda speaks<h4>HILDA.</h4>Quite deliciously! Like a child in a cradle. Oh--I lay and stretched
+<h4><p class="HILDA">HILDA.</p></h4><p class="speech">Quite deliciously! Like a child in a cradle. Oh--I lay and stretched
 myself like--like a princess!</p>
 
-<p class="speech SOLNESS">solness speaks</p><h4>SOLNESS.</h4><p>[Smiles a little.]</p> You were thoroughly comfortable then?</p>
+<h4><p class="SOLNESS">SOLNESS.</p></h4><p class="direction">[Smiles a little.]</p><p class="speech"> You were thoroughly comfortable then?</p>
 
-<p class="speech HILDA">hilda speaks<h4>HILDA.</h4>I should think so.</p>
+<h4><p class="HILDA">HILDA.</p></h4><p class="speech">I should think so.</p>
 
-<p class="speech SOLNESS">solness speaks<h4>SOLNESS.</h4>And no doubt you dreamed, too.</p>
+<h4><p class="SOLNESS">SOLNESS.</p></h4><p class="speech">And no doubt you dreamed, too.</p>
 
 </pre>
 
@@ -67,7 +70,7 @@ myself like--like a princess!</p>
         </tr>
     </thead>
     <tbody>
-        <!-- Add table rows with character, actor, and understudy information -->
+        
         <tr>
             <td>SOLNESS</td>
             <td>Venkatesh</td>
@@ -83,10 +86,11 @@ myself like--like a princess!</p>
             <td>Nivetha thomas</td>
             <td>Nazriya</td>
         </tr>
-        <!-- Add more rows as needed -->
     </tbody>
 </table>
 
-<a href="extra.html">Link to extra.html</a>
+Link to secondact.html file : <a href="secondact.html">Extra file</a>
     </body>
 </html>
+
+
