--- a/secondact.html
+++ b/secondact.html
@@ -3,9 +3,11 @@
     <head>
         <title>A Smidgeon More</title>
         <link rel="stylesheet" type="text/css" href="ibsen.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     </head>
     <body>
+        <img class="picture" src="playimage.jpeg">
         <pre>
 <h4><p class="HILDA">HILDA.</p></h4><p class="speech">Yes, I did. But that was horrid.</p>
 <h4><p class="SOLNESS">SOLNESS.</p></h4><p class="speech">Was it?</p>
@@ -44,6 +46,11 @@ precipice. Do you never have that kind of dream?</p>
 </table>
 
 Link to playpart.html file : <a href="playpart.html">Playpart file</a>
+
+<ul>
+    <li><i class="fa fa-arrow-right"></i><a href="playpart.html">Play Part</a></li>
+    <li><i class="fa fa-arrow-right"></i><a href="secondact.html">Second Act</a></li>
+</ul>
 
     </body>
 </html>
